--- a/src/AuctionService/AuctionService.csproj
+++ b/src/AuctionService/AuctionService.csproj
@@ -24,6 +24,10 @@
 		<PackageReference Include="Polly" Version="7.2.4" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\Contracts\Contracts.csproj" />
+	</ItemGroup>
+
 
 
 
